--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Martin BOLOT, developper - Javascript, NodeJS, PHP, Java, C#">
+    <mate name="keywords" content="développeur, developper, engineer, Javascript, NodeJS, PHP, Java, C#">
+    <meta name="author" content="Martin BOLOT">
 
-    <title>Martin BOLOT - Développeur</title>
+    <title>Martin BOLOT - Développeur Javascript, NodeJS, PHP, Java, C#</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="res/css/bootstrap.min.css" rel="stylesheet">
@@ -85,7 +86,7 @@
                 <div class="col-lg-12">
                     <img id="profile_pic" class="img-responsive" src="res/img/profile.png" alt="" />
                     <div class="intro-text">
-                        <span class="name">Martin BOLOT</span>
+                        <h1 class="name">Martin BOLOT</h1>
                         <hr class="star-light" />
                         <span class="skills">Développeur Web</span>
                     </div>
@@ -229,7 +230,7 @@
                 <div class="col-lg-10 col-lg-offset-2">
                     <ul class="formation_list">
                         <li>
-                            <strong>Anglais : </strong> courant (Voyages aux Etats-Unis en 2005 et 2011)
+                            <strong>Anglais : </strong> très bonne maîtrise (Voyages aux Etats-Unis en 2005 et 2011)
                         </li>
                         <li>
                             <strong>Japonais : </strong> bonne maîtrise (Licence de japonais, Voyages au Japon en 2009 et 2013)
