--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Martin BOLOT, developper - Javascript, NodeJS, PHP, Java, C#">
-    <mate name="keywords" content="développeur, developper, engineer, Javascript, NodeJS, PHP, Java, C#">
+    <meta name="description" content="Martin BOLOT, développeur - Javascript, NodeJS, PHP, Java, C#">
+    <mate name="keywords" content="développeur, developer, engineer, Javascript, NodeJS, PHP, Java, C#">
     <meta name="author" content="Martin BOLOT">
 
     <title>Martin BOLOT - Développeur Javascript, NodeJS, PHP, Java, C#</title>
