--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Martin BOLOT, développeur - Javascript, NodeJS, PHP, Java, C#">
-    <mate name="keywords" content="développeur, developer, engineer, Javascript, NodeJS, PHP, Java, C#">
+    <meta name="keywords" content="développeur, developer, engineer, Javascript, NodeJS, PHP, Java, C#">
     <meta name="author" content="Martin BOLOT">
 
     <title>Martin BOLOT - Développeur Javascript, NodeJS, PHP, Java, C#</title>
@@ -36,7 +36,7 @@
 </head>
 
 <body id="page-top" class="index">
-
+    
     <div id="root"></div>
 
     <script src="/static/bundle.js"></script>
