added optimized bundle file in /dist

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 </head>
 
 <body id="page-top" class="index">
-    
+
     <div id="root"></div>
 
-    <script src="/static/bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
 
     <!-- jQuery -->
     <script src="res/js/jquery.js"></script>
