--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 
     <div id="root"></div>
 
+    <!-- prod -->
     <script src="./dist/bundle.js"></script>
+    <!-- dev -->
+    <!--<script src="/static/bundle.js"></script>-->
 
     <!-- jQuery -->
     <script src="res/js/jquery.js"></script>
